cargo-features = ["edition2021"]

[package]
name = "solana-bridge-lib"
version = "0.0.1"
edition = "2021"

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.18.19"
borsh =  "0.9.3"
num-derive = "0.4.2"
thiserror = "2.0.12"
num-traits = "0.2.19"
bs58 = "0.5.1"
spl-token = { version = "7.0.0", features = ["no-entrypoint"] }
mpl-token-metadata = "5.1.0"
spl-associated-token-account = {version = "6.0.0", features = [ "no-entrypoint" ] }

[dev-dependencies]
solana-sdk = "1.18.19"

[lib]
name = "lib"
crate-type = ["cdylib", "lib"]

[profile.release]
overflow-checks = true