cargo-features = ["edition2021"]

[package]
name = "solana-bridge-lib"
version = "0.0.1"
edition = "2021"

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.16.9"
borsh = ">= 0.9, < 1.0"
num-derive = "^0.3"
thiserror = "^1.0"
num-traits = "^0.2"
bs58 = "0.5.1"
spl-token = { version = ">= 3.5.0", features = ["no-entrypoint"] }
mpl-token-metadata = "5.1.0"
spl-associated-token-account = {version = "6.0.0", features = [ "no-entrypoint" ] }

[dev-dependencies]
solana-sdk = "1.16.9"

[lib]
name = "lib"
crate-type = ["cdylib", "lib"]

[profile.release]
overflow-checks = true