cargo-features = ["edition2021"]

[package]
name = "solana-bridge-lib"
version = "0.0.1"
edition = "2021"

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.16.24"
borsh = "0.10.3"
num-derive = "0.4.0"
thiserror = "1.0.48"
num-traits = "^0.2"
bs58 = "0.5.1"
spl-token = "4.0.0"
mpl-token-metadata = "3.2.3"
spl-associated-token-account = "2.2.0"

[dev-dependencies]
solana-sdk = "1.16.24"

[lib]
name = "lib"
crate-type = ["cdylib", "lib"]

[profile.release]
overflow-checks = true