cargo-features = ["edition2021"]

[package]
name = "solana-bridge-program"
version = "0.0.1"
edition = "2021"

[features]
no-entrypoint = []

[dependencies]
solana-sdk = "2.1.0"
solana-program = "2.1.0"
spl-token = { version = ">= 3.5.0", features = ["no-entrypoint"] }
borsh = ">= 0.9, < 1.0"
mpl-token-metadata = "5.1.0"
thiserror = "^1.0"
shank = { version = "0.4.2" }
num-derive = "^0.3"
arrayref = "~0.3.6"
num-traits = "^0.2"
spl-associated-token-account = {version = "6.0.0", features = [ "no-entrypoint" ] }
bs58 = "0.5.1"
solana-bridge-lib = {path = "../../lib", features = [ "no-entrypoint" ]}

[dev-dependencies]
solana-sdk = "2.1.0"

[lib]
name = "bridge"
crate-type = ["cdylib", "lib"]

[profile.release]
overflow-checks = true