cargo-features = ["edition2021"]

[package]
name = "solana-bridge-program"
version = "0.0.1"
edition = "2021"

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.16.24"
spl-token = "4.0.0"
borsh = "0.10.3"
mpl-token-metadata = "3.2.3"
thiserror = "1.0.48"
shank = { version = "0.4.2" }
num-derive = "0.4.0"
arrayref = "~0.3.6"
num-traits = "^0.2"
spl-associated-token-account = "2.2.0"
bs58 = "0.5.1"
solana-bridge-lib = {path = "../../lib", features = [ "no-entrypoint" ]}

[dev-dependencies]
solana-sdk = "1.16.24"

[lib]
name = "bridge"
crate-type = ["cdylib", "lib"]

[profile.release]
overflow-checks = true