cargo-features = ["edition2021"]

[package]
name = "solana-commission-program"
version = "0.0.1"
edition = "2021"

[features]
no-entrypoint = []

[dependencies]
solana-program = "2.2.1"
spl-token = { version = "7.0.0", features = ["no-entrypoint"] }
borsh =  "^0.10.4"
thiserror = "2.0.12"
shank = { version = "0.4.2" }
num-derive = "0.4.2"
arrayref = "~0.3.6"
num-traits = "~0.2"
spl-associated-token-account = {version = "6.0.0", features = [ "no-entrypoint" ] }
solana-bridge-lib = {path = "../../lib", features = [ "no-entrypoint" ]}
solana-bridge-program = {path = "../../bridge/program", features = [ "no-entrypoint" ]}

[dev-dependencies]
solana-sdk = "2.2.1"

[lib]
name = "commission"
crate-type = ["cdylib", "lib"]

[profile.release]
overflow-checks = true

[net]
git-fetch-with-cli = true