cargo-features = ["edition2021"]

[package]
name = "solana-upgrade-program"
version = "0.0.1"
edition = "2021"

[features]
no-entrypoint = []

[dependencies]
solana-program = "2.1.0"
spl-token = { version = ">= 3.5.0", features = ["no-entrypoint"] }
borsh = ">= 0.9, < 1.0"
thiserror = "2.0.12"
shank = { version = "0.4.2" }
num-derive = "0.4.2"
arrayref = "~0.3.6"
num-traits = "^0.2"
bs58 = "0.5.1"
solana-bridge-lib = {path = "../../lib", features = [ "no-entrypoint" ]}

[dev-dependencies]
solana-sdk = "1.16.9"

[lib]
name = "upgrade"
crate-type = ["cdylib", "lib"]

[profile.release]
overflow-checks = true